--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,16 @@ email: mbeigi@ucdavis.edu
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
-keywords: minimal light
+keywords: Mo Beigi, Mohammad Beigi
 description: The Minimal Light is a simple and elegant jekyll theme for academic personal homepage.
 canonical: https://minimal-light-theme.yliu.me/
 
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
-google_scholar: https://scholar.google.com/
+google_scholar: https://scholar.google.com/citations?user=nCuzemQAAAAJ&hl=en
 cv_link: assets/files/curriculum_vitae.pdf
 github_link: https://github.com/
-linkedin: https://www.linkedin.com/
+linkedin: https://www.linkedin.com/in/mo-beigi?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
 twitter: https://twitter.com/
 
 # Images (e.g., your profile picture and your website's favicon) 
