--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ canonical: https://minimal-light-theme.yliu.me/
 google_scholar: https://scholar.google.com/citations?user=nCuzemQAAAAJ&hl=en
 github_link: https://github.com/mbeigics
 linkedin: https://www.linkedin.com/in/mo-beigi?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
-twitter: https://twitter.com/
+twitter: https://x.com/mbeigi_cs
 
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
