--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ canonical: https://minimal-light-theme.yliu.me/
 
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
-google_scholar: https://scholar.google.com/citations?user=nCuzemQAAAAJ&hl=en
+google_scholar: https://scholar.google.com/citations?hl=en&view_op=list_works&gmla=AH8HC4yDAjCJPkYisas9L7vJepv2LvoGX0saKht-11yVRI2y1Bja7Ad3yBsglIIU4XmblGUSUO1sOYxda3AeSQ&user=f7ixDnMAAAAJ
 github_link: https://github.com/mbeigics
 linkedin: https://www.linkedin.com/in/mo-beigi?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
 twitter: https://x.com/mbeigi_cs
