--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -4,7 +4,7 @@ main:
     authors: Zihao Lin*, Samyadeep Basu*, <strong>Mohammad Beigi8</strong>, Varun Manjunatha, Ryan A Rossi, Zichao Wang, Yufan Zhou, Sriram Balasubramanian, Arman Zarei, Keivan Rezaei, Ying Shen, Barry Menglong Yao, Zhiyang Xu, Qin Liu, Yuxiang Zhang, Yan Sun, Shilong Liu, Li Shen, Hongxuan Li, Soheil Feizi, Lifu Huang (*Equal Contribution)
     
     pdf: https://arxiv.org/pdf/2502.17516.pdf
-    image: ./assets/img/teaser_example_2.png
+    image: ./assets/img/taxonomy.jpg
     notes: Pre-Print
 
   - title: "Mnemonics Training: Multi-Class Incremental Learning without Forgetting"
