--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -10,10 +10,7 @@ main:
   - title: InternalInspector: Robust Confidence Estimation in LLMs through Internal States
     authors: <strong>Mohammad Beigi</strong>, Ying Shen, Runing Yang, Zihao Lin, Qifan Wang, Ankith Mohan, Jianfeng He, Ming Jin, Chang-Tien Lu, Lifu Huang
     conference_short: EMNLP 2024
-    conference: 
+    conference: The 2025 Conference on Empirical Methods in Natural Language Processing
     pdf: https://arxiv.org/pdf/2406.12053.pdf
-    #code: https://github.com/yaoyao-liu/class-incremental-learning/tree/main/mnemonics-training
-    #page: https://class-il.mpi-inf.mpg.de/mnemonics/
-    #bibtex: https://class-il.mpi-inf.mpg.de/mnemonics/
-    #notes: Oral Presentation
     image: ./assets/img/overview_internal.png
+    notes: Poster
