--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -8,9 +8,10 @@ main:
     notes: Pre-Print
 
   - title: "InternalInspector I2: Robust Confidence Estimation in LLMs through Internal States"
-    authors: Zihao Lin*, Samyadeep Basu*, <strong>Mohammad Beigi*</strong>, Varun Manjunatha, Ryan A Rossi, Zichao Wang, Yufan Zhou, Sriram Balasubramanian, Arman Zarei, Keivan Rezaei, Ying Shen, Barry Menglong Yao, Zhiyang Xu, Qin Liu, Yuxiang Zhang, Yan Sun, Shilong Liu, Li Shen, Hongxuan Li, Soheil Feizi, Lifu Huang (*Equal Contribution)
-    conference_short: Pre-Print
-    pdf: https://arxiv.org/pdf/2502.17516.pdf
-    image: ./assets/img/taxonomy.jpg
-    notes: Pre-Print
+    authors: <strong>Mohammad Beigi</strong>, Ying Shen, Runing Yang, Zihao Lin, Qifan Wang, Ankith Mohan, Jianfeng He, Ming Jin, Chang-Tien Lu, Lifu Huang
+    conference_short: EMNLP 2024
+    conference: The 2024 Conference on Empirical Methods in Natural Language Processing (EMNLP)
+    pdf: https://arxiv.org/pdf/2406.12053.pdf
+    image: ./assets/img/overview_internal.png
+    notes: Poster
  
