--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -7,7 +7,7 @@ main:
     image: ./assets/img/taxonomy.jpg
     notes: Pre-Print
 
-  - title: "InternalInspector I2: Robust Confidence Estimation in LLMs through Internal States"
+  - title: "InternalInspector I<sup>2</sup>: Robust Confidence Estimation in LLMs through Internal States"
     authors: <strong>Mohammad Beigi</strong>, Ying Shen, Runing Yang, Zihao Lin, Qifan Wang, Ankith Mohan, Jianfeng He, Ming Jin, Chang-Tien Lu, Lifu Huang
     conference_short: EMNLP 2024
     conference: The 2024 Conference on Empirical Methods in Natural Language Processing (EMNLP)
