--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ google_scholar: https://scholar.google.com/citations?hl=en&view_op=list_works&gm
 github_link: https://github.com/mbeigics
 linkedin: https://www.linkedin.com/in/mo-beigi?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
 twitter: https://x.com/mbeigi_cs
+instagram: https://www.instagram.com/mohammadbeigiiiiii?igsh=NTc4MTIwNjQ2YQ%3D%3D&utm_source=qr
 
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
