--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,10 @@ email: mbeigi@ucdavis.edu
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
-keywords: Mo Beigi, Mohammad Beigi
-description: The Minimal Light is a simple and elegant jekyll theme for academic personal homepage.
-canonical: https://minimal-light-theme.yliu.me/
+keywords: Mo Beigi, Mohammad Beigi, UC Davis, NLP, LLMs, AI, Reinforcement Learning, PhD student, Large Language Models
+description: Personal academic website of Mohammad (Mo) Beigi, a Ph.D. student at the University of California, Davis, working on LLMs, reasoning, and AI alignment.
+canonical: https://mbeigics.github.io/
+
 
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
