--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ instagram: https://www.instagram.com/mohammadbeigiiiiii?igsh=NTc4MTIwNjQ2YQ%3D%3
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
 avatar: ./assets/img/mo.jpg
-favicon: ./assets/img/favicon.png
-favicon_dark: ./assets/img/favicon-dark.png
+favicon: ./assets/img/icon.png
+favicon_dark: ./assets/img/icon.png
 
 # Footnote
 # You may use the option to disable the footnote, "Powered by Jekyll and Minimal Light theme."
