--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ email: mbeigi@ucdavis.edu
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
-keywords: Mo Beigi, Mohammad Beigi, UC Davis, NLP, LLMs, AI, Reinforcement Learning, PhD student, Large Language Models
+keywords: Mo Beigi, Mohammad Beigi, UC Davis, NLP, LLMs, AI, Reinforcement Learning, PhD student, Large Language Models, Uncertainty Estimation of LLM, Confidence Estimation of LLM, Memory Editing of LLM
 description: Personal academic website of Mohammad (Mo) Beigi, a Ph.D. student at the University of California, Davis, working on LLMs, reasoning, and AI alignment.
 canonical: https://mbeigics.github.io/
 
