--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Basic Information 
-title: Mo Beigi
+title: Mohammad Beigi
 position: Ph.D. Student
 affiliation: University of California, Davis
 email: mbeigi@ucdavis.edu
